@@ -4,6 +4,7 @@ Changes
 0.8.3.2 -> 0.8.3.3
 
 - Fix member storage
+- Drop extension no longer required
 
 0.8.3.1 -> 0.8.3.2
 
